Terraform/internet_gateway.tf
resource "aws_internet_gateway" "three_tier_igw" {

  vpc_id = aws_vpc.three_tier_vpc.id

  tags = {
    Name = "three-tier-igw"
  }

}
