Terraform/vpc.tf
resource "aws_vpc" "three_tier_vpc" {

  cidr_block = var.vpc_cidr

  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "three-tier-vpc"
  }
}
